[package]
name = "umportal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "1"
httparse = "1"
tokio = { version = "1", features = ["full"] }
socks5-impl = "0"
log4rs = "1"
clap = { version = "4", features = ["derive"] }
serde_json = "1"
serde = "1"